# CC-Demo

./: .gitignore  README.md
audio/: audio-process.c
audio/AudioFile/: AudioFile.cpp  AudioFile.h
audio/audio_recorder/: audio_recorder.c
boost_msm_demo/: CMakeLists.txt
boost_msm_demo/include/: robot_manager.h  utilities.h
boost_msm_demo/include/state_machines/: active_state_machine.h  bewith_constraint_state_machine.h  bewith_state_machine.h  docking_state_machine.h  goto_state_machine.h  high_level_common.h  main_state_machine.h  msm_common.h  msm_events.h  msm_flags.h
boost_msm_demo/src/: main.cpp  robot_manager.cpp
boost_msm_demo/src/state_machines/: bewith_constraint_state_machine.cpp  bewith_state_machine.cpp  docking_state_machine.cpp  goto_state_machine.cpp
uart/: Makefile  Readme.txt  gplSerial.py  uart.c  virtualCom.py
ultrasonic/: Makefile  README.md  rk3399-ultrasonic.dtsi  ultrasonic.c  ultrasonic.h  ultrasonic_test.c
